--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,10 @@ version: '3'
 services:
   postgres:
     image: postgres:12-alpine
+    restart: always
     ports:
       - 5432:5432
-    # volumes:
-    #   - .data/postgres:/var/lib/postgresql/data
+    volumes:
+      - .data/postgres:/var/lib/postgresql/data
     environment:
       POSTGRES_PASSWORD: postgres
