--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: postgres:12-alpine
     ports:
       - 5432:5432
-    volumes:
-      - .data/postgres:/var/lib/postgresql/data
+    # volumes:
+    #   - .data/postgres:/var/lib/postgresql/data
     environment:
       POSTGRES_PASSWORD: postgres
