--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "start:dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
-        "migration:create": "typeorm migration:create ./src/database/migrations",
+        "typeorm": "ts-node ./node_modules/typeorm/cli",
+        "migration:generate": "npm run typeorm -- migration:generate new -d ./config/dataSource.ts",
+        "schema:sync": "npm run typeorm -- schema:sync",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "test": "jest",
         "test:watch": "jest --watch",
