--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
         "typeorm": "ts-node ./node_modules/typeorm/cli",
-        "migration:generate": "npm run typeorm -- migration:generate new -d ./config/dataSource.ts",
+        "migration:generate": "npm run typeorm -- migration:generate -d ./config/dataSource.ts",
+        "migration:revert": "npm run typeorm -- migration:revert -d ./config/dataSource.ts",
+        "migration:run": "npm run typeorm -- migration:run -d ./config/dataSource.ts",
         "schema:sync": "npm run typeorm -- schema:sync",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "test": "jest",
